upgrade chat version

--- a/chat/chat-app/scss/components/_carousel.scss
+++ b/chat/chat-app/scss/components/_carousel.scss
@@ -53,9 +53,10 @@
   align-items: center;
 }
 
-.swiper__img-container{
-  width: 100%;
+.slide-img {
+  width: 165px;
 }
+
 
 /*
  *  1. -webkit-transform is needed to fix the conflict of:
