--- a/chat/chat-app/scss/components/_landing-page.scss
+++ b/chat/chat-app/scss/components/_landing-page.scss
@@ -6,6 +6,9 @@
   height: 100%;
   background: #fff;
   z-index: 1000;
+  #customLandingPage{
+    height: 100%;
+  }
   .landing-page-container{
     width: 100%;
     height: 100%;
