--- a/chat/chat-app/www/templates/login.html
+++ b/chat/chat-app/www/templates/login.html
@@ -6,7 +6,7 @@
     </div>
   </ion-header-bar>
   <ion-content>
-    <form ng-submit="doLogin()">
+    <form method="post" ng-submit="doLogin()">
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Username</span>
@@ -14,7 +14,7 @@
         </label>
         <label class="item item-input">
           <span class="input-label">Password</span>
-          <input type="password" ng-model="loginData.password">
+          <input type="password" ng-model="loginData.password" autocomplete="off">
         </label>
         <label class="item">
           <button class="button button-block button-positive" type="submit">Log in</button>
