Revert to old version

--- a/chat/chat-app/scss/components/_carousel.scss
+++ b/chat/chat-app/scss/components/_carousel.scss
@@ -53,10 +53,9 @@
   align-items: center;
 }
 
-.slide-img {
-  width: 165px;
+.swiper__img-container{
+  width: 100%;
 }
-
 
 /*
  *  1. -webkit-transform is needed to fix the conflict of:
