--- a/chat/chat-app/scss/utilities/_variables.scss
+++ b/chat/chat-app/scss/utilities/_variables.scss
@@ -16,6 +16,8 @@ $color-primary-darker: #237db3;
 $color-primary-darkest: #434e9b;
 $color-secondary: #0c60ee;
 
+$color-green-lightest: #A7CF39;
+
 $chatBubbleSystemBgColorDefault: $color-gray-lighter;
 $chatBubbleSystemBgColor: $color-gray-lighter;
 $backgroundColor: $color-white;
