--- a/chat/chat-app/www/js/chat/components/chat-detail-panel/chat-detail-panel.html
+++ b/chat/chat-app/www/js/chat/components/chat-detail-panel/chat-detail-panel.html
@@ -20,7 +20,7 @@
 
     <div ng-if="$ctrl.panel.type === 'text'"
         ng-repeat="content in $ctrl.panel.contents track by $index"
-        class="text-description">
+        class="text-description full-length">
         <b ng-if="content.label">{{ content.label }}:</b> <span ng-bind-html="content.value"></span>
     </div>
 
